Align panel buttons centrally on mobile (this fixes #823)

--- a/css/main.css
+++ b/css/main.css
@@ -733,11 +733,11 @@ a.chapter-nav:hover {
 
   @media (min-height: 650px) {
     .Android:not(.keyboard-shown) #app-container:not(.fullscreen) {
-      height: 91vh;
+      height: 93vh;
     }
 
     .Android:not(.keyboard-shown) #app-container.fullscreen {
-      height: 97vh;
+      height: 100vh;
     }
   }
 
@@ -747,7 +747,7 @@ a.chapter-nav:hover {
     }
 
     .Android:not(.keyboard-shown) #app-container.fullscreen {
-      height: 98vh;
+      height: 100vh;
     }
   }
 }
